syntax = "proto3";

package pb;

option go_package = "peerbill-user-api/pb";

message DataLookupRequest {
    string network = 1;
}

message DataLookupResponse {
  bool status = 1;
  string description = 2;
  MessageDetails message = 3;
  int32 status_code = 4;
}

message MessageDetails {
  repeated NetworkDetails details = 1;
}

message NetworkDetails {
  string network_name = 1;
  string title = 2;
  string network_code = 3;
  string check_balance = 4;
  string logo_url = 5;
  repeated Plan plans = 6;
}

message Plan {
  string plan_code = 1;
  string name = 2;
  string alias = 3;
  string amount = 4;
}
