syntax = "proto3";

package pb;

option go_package = "peerbill-trader-api/pb";

message MadePaymentRequest {
    int64 id = 1;
    string username = 2;
    string order_type = 3;
    string user_address = 4;
    string escrow_address = 5;
}

message MadePaymentResponse {
    string message = 1;
}